# quantization-analysis-lab

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
configs/: ptq_fp16.yaml  ptq_int4_awq.yaml  ptq_int4_bnb_nf4.yaml  ptq_int4_exploration.yaml  ptq_int4_gptq.yaml  ptq_int8_bnb.yaml  ptq_int8_per_channel.yaml  ptq_int8_per_channel_asym.yaml  ptq_int8_per_tensor.yaml  ptq_int8_per_tensor_asym.yaml  ptq_int8_torch_ao_per_channel.yaml  ptq_int8_torch_ao_per_tensor.yaml  ptq_mixed_precision.yaml
docs/: conclusion.md  design.md  experiment_matrix.md
results/: report.md  report_zh.md
results/raw/: .gitkeep  fp16_baseline.csv  fp16_baseline.json  int4_weight_only.csv  int4_weight_only.json  int8_per_channel_asym.csv  int8_per_channel_asym.json  int8_per_channel_sym.csv  int8_per_channel_sym.json  int8_per_tensor_asym.csv  int8_per_tensor_asym.json  int8_per_tensor_sym.csv  int8_per_tensor_sym.json  sensitivity_calibration.json  sensitivity_layerwise.json  sensitivity_weightonly_vs_full.json
results/tables/: .gitkeep  delta_vs_baseline.csv  memory_footprint.csv  sensitivity_calibration.csv  sensitivity_layerwise.csv  sensitivity_weightonly_vs_full.csv  (+2 more)
scripts/: evaluate_accuracy.py  generate_report.py  mixed_precision_search.py  plot_tradeoffs.py  run_all_experiments.py  run_experiments.py  sensitivity_analysis.py  summarize_results.py
tests/: test_awq_backend.py  test_bnb_backend.py  test_fake_quant.py  test_gptq_backend.py  test_int4_kernels.py  test_mixed_precision_backend.py  test_observers.py  test_pipeline.py  test_torch_ao_backend.py
(+23 files in other folders)
