[project]
name = "quantization-analysis-lab"
version = "0.1.0"
description = "Post-training quantization analysis framework for low-precision inference tradeoffs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
bitsandbytes = ["bitsandbytes>=0.41"]
all-backends = ["bitsandbytes>=0.41"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
